--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ scikit-learn = "^1.2.2"
 transformers = "^4.28.1"
 wandb = "^0.14.2"
 mlflow = "^2.3.0"
+fastapi = {extras = ["all"], version = "^0.95.1"}
+omegaconf = "^2.3.0"
 
 
 [build-system]
